# survive-alone

./: .gitignore  README.md  bootstrap.tscn  default_bus_layout.tres  icon.svg.import  project.godot  test.gd
!saves/: .condition_effects_names.cfg.kate-swp  .execute_keeper.cfg.kate-swp  condition_effects_names.cfg  execute_keeper.cfg  test_save.db
!tools/Gdscript-pre-commit/: .pre-commit-config.yaml  README.md  pyproject.toml
.docs/: SurviveAlone - CombatSystem.md  SurviveAlone - Glossary.md  SurviveAlone - Items.md  SurviveAlone - MVP.md  SurviveAlone - Professions.md
.godot/: global_script_class_cache.cfg
bootstrap/: bootstrap.tscn
common/: custom_conditions_and_effects.gd  debounce.gd  debounce.gd.uid  game_db.gd  game_db.gd.uid  pool_controller.gd.uid  property_generater.gd  property_generater.gd.uid  resource_db.gd  resource_db.gd.uid  save_db.gd  save_db.gd.uid  throttle.gd  throttle.gd.uid  tokens.gd  utils.gd  utils.gd.uid  version_display.gd.uid
content/: database.gddb
database/: database.gddb
databases/: resources_collector.gd  resources_collector.gd.uid  test_editor.sqlite3
feature/: README.md  inventories.tscn
game/: game.gd  game.gd.uid  game.tscn  game_state.gd  game_state.gd.uid
localization/: .~lock.events.csv#  .~lock.localizations.csv#  .~lock.localizations.ods#  .~lock.quests.csv#  LocalizationKeys.gd  LocalizationKeys.gd.uid  LocalizationPlaceholders.gd  LocalizationPlaceholders.gd.uid  LocalizationRemaps.gd.uid  Placeholders.tres  characters.ods  events.csv  events.csv.import  events.ods  general.csv  general.csv.import  (+9 more)
(+10141 files in other folders)
